--- a/serverVariables.ini
+++ b/serverVariables.ini
@@ -1,3 +1,4 @@
 [main]
-cache.expirationTime = 3600
-token.lifeDuration = 3600
+getRequestscache.expirationTime = 600
+token.lifeDuration = 600
+repository.CacheExpirationTime = 600
